CompilerValueCCS/src/main/scala/parser/.antlr/CcsvpParser.java
// Generated from Ccsvp.g4 by ANTLR 4.10.1
package main.scala.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CcsvpParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, DEFINE=2, SEPARATOR=3, COMMA=4, OUT=5, LBRACKET=6, RBRACKET=7, CURLY_LBRACKET=8, 
		CURLY_RBRACKET=9, SQUARED_LBRACKET=10, SQUARED_RBRACKET=11, SUM=12, SUB=13, 
		MUL=14, DIV=15, LEQ=16, LE=17, GEQ=18, GE=19, EQUALS=20, NOT=21, AND=22, 
		OR=23, PAR=24, IF=25, THEN=26, RESTR=27, TAU=28, INTEGER=29, IDENTIFIER=30;
	public static final int
		RULE_summation = 0, RULE_product = 1, RULE_expr = 2, RULE_term = 3, RULE_factor = 4, 
		RULE_logicop = 5, RULE_boolop = 6, RULE_boolbinop = 7, RULE_bterm = 8, 
		RULE_exprbinop = 9, RULE_constant = 10, RULE_ccsvp = 11, RULE_program = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"summation", "product", "expr", "term", "factor", "logicop", "boolop", 
			"boolbinop", "bterm", "exprbinop", "constant", "ccsvp", "program"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'='", "'.'", "','", "'''", "'('", "')'", "'{'", "'}'", "'['", 
			"']'", "'+'", "'-'", "'*'", "'/'", "'<='", "'<'", "'>='", "'>'", "'=='", 
			"'!'", "'&&'", "'||'", "'|'", "'if'", "'then'", "'\\'", "'tau'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "DEFINE", "SEPARATOR", "COMMA", "OUT", "LBRACKET", "RBRACKET", 
			"CURLY_LBRACKET", "CURLY_RBRACKET", "SQUARED_LBRACKET", "SQUARED_RBRACKET", 
			"SUM", "SUB", "MUL", "DIV", "LEQ", "LE", "GEQ", "GE", "EQUALS", "NOT", 
			"AND", "OR", "PAR", "IF", "THEN", "RESTR", "TAU", "INTEGER", "IDENTIFIER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Ccsvp.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CcsvpParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SummationContext extends ParserRuleContext {
		public TerminalNode SUM() { return getToken(CcsvpParser.SUM, 0); }
		public TerminalNode SUB() { return getToken(CcsvpParser.SUB, 0); }
		public SummationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_summation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CcsvpListener ) ((CcsvpListener)listener).enterSummation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CcsvpListener ) ((CcsvpListener)listener).exitSummation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CcsvpVisitor ) return ((CcsvpVisitor<? extends T>)visitor).visitSummation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SummationContext summation() throws RecognitionException {
		SummationContext _localctx = new SummationContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_summation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			_la = _input.LA(1);
			if ( !(_la==SUM || _la==SUB) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProductContext extends ParserRuleContext {
		public TerminalNode MUL() { return getToken(CcsvpParser.MUL, 0); }
		public TerminalNode DIV() { return getToken(CcsvpParser.DIV, 0); }
		public ProductContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_product; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CcsvpListener ) ((CcsvpListener)listener).enterProduct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CcsvpListener ) ((CcsvpListener)listener).exitProduct(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CcsvpVisitor ) return ((CcsvpVisitor<? extends T>)visitor).visitProduct(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProductContext product() throws RecognitionException {
		ProductContext _localctx = new ProductContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_product);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			_la = _input.LA(1);
			if ( !(_la==MUL || _la==DIV) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public List<SummationContext> summation() {
			return getRuleContexts(SummationContext.class);
		}
		public SummationContext summation(int i) {
			return getRuleContext(SummationContext.class,i);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CcsvpListener ) ((CcsvpListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CcsvpListener ) ((CcsvpListener)listener).exitExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CcsvpVisitor ) return ((CcsvpVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			term();
			setState(36);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SUM || _la==SUB) {
				{
				{
				setState(31);
				summation();
				setState(32);
				term();
				}
				}
				setState(38);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public List<FactorContext> factor() {
			return getRuleContexts(FactorContext.class);
		}
		public FactorContext factor(int i) {
			return getRuleContext(FactorContext.class,i);
		}
		public List<ProductContext> product() {
			return getRuleContexts(ProductContext.class);
		}
		public ProductContext product(int i) {
			return getRuleContext(ProductContext.class,i);
		}
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CcsvpListener ) ((CcsvpListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CcsvpListener ) ((CcsvpListener)listener).exitTerm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CcsvpVisitor ) return ((CcsvpVisitor<? extends T>)visitor).visitTerm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_term);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			factor();
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==MUL || _la==DIV) {
				{
				{
				setState(40);
				product();
				setState(41);
				factor();
				}
				}
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FactorContext extends ParserRuleContext {
		public TerminalNode LBRACKET() { return getToken(CcsvpParser.LBRACKET, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RBRACKET() { return getToken(CcsvpParser.RBRACKET, 0); }
		public TerminalNode IDENTIFIER() { return getToken(CcsvpParser.IDENTIFIER, 0); }
		public TerminalNode INTEGER() { return getToken(CcsvpParser.INTEGER, 0); }
		public FactorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_factor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CcsvpListener ) ((CcsvpListener)listener).enterFactor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CcsvpListener ) ((CcsvpListener)listener).exitFactor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CcsvpVisitor ) return ((CcsvpVisitor<? extends T>)visitor).visitFactor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FactorContext factor() throws RecognitionException {
		FactorContext _localctx = new FactorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_factor);
		try {
			setState(54);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LBRACKET:
				enterOuterAlt(_localctx, 1);
				{
				setState(48);
				match(LBRACKET);
				setState(49);
				expr();
				setState(50);
				match(RBRACKET);
				}
				break;
			case IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(52);
				match(IDENTIFIER);
				}
				break;
			case INTEGER:
				enterOuterAlt(_localctx, 3);
				{
				setState(53);
				match(INTEGER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicopContext extends ParserRuleContext {
		public TerminalNode AND() { return getToken(CcsvpParser.AND, 0); }
		public TerminalNode OR() { return getToken(CcsvpParser.OR, 0); }
		public LogicopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CcsvpListener ) ((CcsvpListener)listener).enterLogicop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CcsvpListener ) ((CcsvpListener)listener).exitLogicop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CcsvpVisitor ) return ((CcsvpVisitor<? extends T>)visitor).visitLogicop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LogicopContext logicop() throws RecognitionException {
		LogicopContext _localctx = new LogicopContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_logicop);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			_la = _input.LA(1);
			if ( !(_la==AND || _la==OR) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BoolopContext extends ParserRuleContext {
		public TerminalNode LE() { return getToken(CcsvpParser.LE, 0); }
		public TerminalNode GE() { return getToken(CcsvpParser.GE, 0); }
		public TerminalNode GEQ() { return getToken(CcsvpParser.GEQ, 0); }
		public TerminalNode LEQ() { return getToken(CcsvpParser.LEQ, 0); }
		public TerminalNode EQUALS() { return getToken(CcsvpParser.EQUALS, 0); }
		public BoolopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CcsvpListener ) ((CcsvpListener)listener).enterBoolop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CcsvpListener ) ((CcsvpListener)listener).exitBoolop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CcsvpVisitor ) return ((CcsvpVisitor<? extends T>)visitor).visitBoolop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BoolopContext boolop() throws RecognitionException {
		BoolopContext _localctx = new BoolopContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_boolop);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LEQ) | (1L << LE) | (1L << GEQ) | (1L << GE) | (1L << EQUALS))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BoolbinopContext extends ParserRuleContext {
		public List<BtermContext> bterm() {
			return getRuleContexts(BtermContext.class);
		}
		public BtermContext bterm(int i) {
			return getRuleContext(BtermContext.class,i);
		}
		public List<LogicopContext> logicop() {
			return getRuleContexts(LogicopContext.class);
		}
		public LogicopContext logicop(int i) {
			return getRuleContext(LogicopContext.class,i);
		}
		public BoolbinopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolbinop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CcsvpListener ) ((CcsvpListener)listener).enterBoolbinop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CcsvpListener ) ((CcsvpListener)listener).exitBoolbinop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CcsvpVisitor ) return ((CcsvpVisitor<? extends T>)visitor).visitBoolbinop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BoolbinopContext boolbinop() throws RecognitionException {
		BoolbinopContext _localctx = new BoolbinopContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_boolbinop);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			bterm();
			setState(66);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(61);
					logicop();
					setState(62);
					bterm();
					}
					} 
				}
				setState(68);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BtermContext extends ParserRuleContext {
		public TerminalNode NOT() { return getToken(CcsvpParser.NOT, 0); }
		public BoolbinopContext boolbinop() {
			return getRuleContext(BoolbinopContext.class,0);
		}
		public ExprbinopContext exprbinop() {
			return getRuleContext(ExprbinopContext.class,0);
		}
		public TerminalNode LBRACKET() { return getToken(CcsvpParser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(CcsvpParser.RBRACKET, 0); }
		public BtermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bterm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CcsvpListener ) ((CcsvpListener)listener).enterBterm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CcsvpListener ) ((CcsvpListener)listener).exitBterm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CcsvpVisitor ) return ((CcsvpVisitor<? extends T>)visitor).visitBterm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BtermContext bterm() throws RecognitionException {
		BtermContext _localctx = new BtermContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_bterm);
		try {
			setState(76);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				match(NOT);
				setState(70);
				boolbinop();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				exprbinop();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(72);
				match(LBRACKET);
				setState(73);
				boolbinop();
				setState(74);
				match(RBRACKET);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprbinopContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public BoolopContext boolop() {
			return getRuleContext(BoolopContext.class,0);
		}
		public ExprbinopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprbinop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CcsvpListener ) ((CcsvpListener)listener).enterExprbinop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CcsvpListener ) ((CcsvpListener)listener).exitExprbinop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CcsvpVisitor ) return ((CcsvpVisitor<? extends T>)visitor).visitExprbinop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprbinopContext exprbinop() throws RecognitionException {
		ExprbinopContext _localctx = new ExprbinopContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_exprbinop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			expr();
			setState(79);
			boolop();
			setState(80);
			expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(CcsvpParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(CcsvpParser.IDENTIFIER, i);
		}
		public TerminalNode LBRACKET() { return getToken(CcsvpParser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(CcsvpParser.RBRACKET, 0); }
		public List<TerminalNode> COMMA() { return getTokens(CcsvpParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CcsvpParser.COMMA, i);
		}
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CcsvpListener ) ((CcsvpListener)listener).enterConstant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CcsvpListener ) ((CcsvpListener)listener).exitConstant(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CcsvpVisitor ) return ((CcsvpVisitor<? extends T>)visitor).visitConstant(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_constant);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(IDENTIFIER);
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACKET) {
				{
				setState(83);
				match(LBRACKET);
				setState(84);
				match(IDENTIFIER);
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(85);
					match(COMMA);
					setState(86);
					match(IDENTIFIER);
					}
					}
					setState(91);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(92);
				match(RBRACKET);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
